--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "npx tsc",
+    "dev": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
@@ -32,5 +34,12 @@
     "pug": "^3.0.2",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7-rc.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.8",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
